manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashresponse-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashresponse
  template:
    metadata:
      labels:
        app: hashresponse
    spec:
      containers:
        - name: hashresponse
          image: jakousa/dwk-app1:b7fc18de2376da80ff0cfc72cf581a9f94d10e64
