manifests/random-str-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: random-string-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: random-string
  template:
    metadata:
      labels:
        app: random-string
    spec:
      containers:
        - name: random-string
          imagePullPolicy: IfNotPresent
          image: random-string:v1
